# semantic_sense

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: example_anomaly_detection.ipynb  example_usage.py  food.csv
src/semantic_sense/: __init__.py  core.py  model_loader.py  utils.py
src/semantic_sense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
